--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Small Fish Studios</title>
     <link rel=icon href=SmallFishStudios.png>
+    <meta name="description" content="Testing.">
 </head>
 <body>
 
