--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <title>Small Fish Studios</title>
     <link rel=icon href=SmallFishStudios.png>
+    <meta property="og:image" content="SmallFishStudios.png" />
     <meta name="og:description" content="Testing." />
 </head>
 <body>
 
     <h1>This is a Heading</h1>
     <p>This is a paragraph.</p>
-    <p> testing uploaded?</p>
+    <p> yes</p>
 </body>
 </html>
