--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Small Fish Studios</title>
     <link rel=icon href=SmallFishStudios.png>
-    <meta property="og:image" content="SmallFishStudios.png" />
+    <meta property="og:image" content="http://smallfishstudios.github.io/images/SmallFishStudios.png" />
     <meta name="og:description" content="Testing." />
 </head>
 <body>
