--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>This is a Heading</h1>
     <p>This is a paragraph.</p>
     <p> no</p>
+
+    <img src="SmallFishStudios.png" />
 </body>
 </html>
