--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <title>Small Fish Studios</title>
     <link rel=icon href=SmallFishStudios.png>
-    <meta property="og:image" content="http://smallfishstudios.github.io/images/SmallFishStudios.png" />
+    <meta property="og:image" content="https://smallfishstudios.github.io/SmallFishStudios.png" />
     <meta name="og:description" content="Testing." />
 </head>
 <body>
 
     <h1>This is a Heading</h1>
     <p>This is a paragraph.</p>
-    <p> no</p>
+    <p> p e r h a p s</p>
 
     <img src="SmallFishStudios.png" />
 </body>
