--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <link rel=icon href=SmallFishStudios.png>
     <meta property="og:image" content="https://smallfishstudios.github.io/SmallFishStudios.png" />
     <meta name="og:description" content="Testing." />
+
+    <link rel="stylesheet" href="styles.css" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
-    <p> p e r h a p s</p>
+    <header>
+        <img src="https://smallfishstudios.github.io/SmallFishStudios.png"  alt="Logo"/>
+        <h1>Small Fish Studios</h1>
+    </header>
 </body>
 </html>
