Changes to CSS and HTML.
UI Changes.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header>
-        <img src="https://smallfishstudios.github.io/SmallFishStudios.png"  alt="Logo"/>
-        <h1>Small Fish Studios</h1>
+        <button><img src="https://smallfishstudios.github.io/SmallFishStudios.png" /></button>
+        <h1 style="padding-left: 30px; padding-top: 40px;">Small Fish Studios</h1>
     </header>
 </body>
 </html>
