--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Small Fish Studios</title>
     <link rel=icon href=SmallFishStudios.png>
     <meta property="og:image" content="https://smallfishstudios.github.io/SmallFishStudios.png" />
-    <meta name="og:description" content="Testing." />
+    <meta name="og:description" content="Official site of the indie dev studio, Small Fish Studios! Purchase games, join events, contact the developers with bug reports or suggestions, and much more." />
 
     <link rel="stylesheet" href="styles.css" />
 
