Updated Design, Placeholder Background.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Small Fish Studios</title>
-    <link rel=icon href=SmallFishStudios.png>
-    <meta property="og:image" content="https://smallfishstudios.github.io/SmallFishStudios.png" />
-    <meta name="og:description" content="Official site of the indie dev studio, Small Fish Studios! Purchase games, join events, contact the developers with bug reports or suggestions, and much more." />
-
-    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="with=device-width, initial-scale=1.0">
+    <title>Home - Small Fish Studios</title>
+    <link rel="stylesheet" href="styles.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
 </head>
 <body>
-    <header>
-        <button><img src="https://smallfishstudios.github.io/SmallFishStudios.png" /></button>
-        <h1 style="padding-left: 30px; padding-top: 40px;">Small Fish Studios</h1>
-    </header>
+    <section class="header">
+        <nav>
+            <a href="index.html"><img src="images/logo.png"></a>
+            <div class="nav-links">
+                
+                <!--Add X Button--<i class="fa fa-times"></i>-->
+                <ul>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">ABOUT</a></li>
+                    <li><a href="">GAMES</a></li>
+                    <li><a href="">UPDATES</a></li>
+                    <li><a href="">CONTACT</a></li>
+                </ul>
+            </div>
+            <!-- Add Hamburger Icon<i class="fa fa-bars"></i>-->
+        </nav>
+
+        <div class="text-box">
+            <h1>Small Fish Studios</h1>
+            <p>Small fish in a big pond. Indie Game Studio working to make great games affordable for all.</p>
+            <a href="" class="LearnMore">Learn More</a>
+        </div>
+    </section>
 </body>
 </html>
